--- a/Aula_08/Aula8.qsf
+++ b/Aula_08/Aula8.qsf
@@ -77,4 +77,5 @@ set_global_assignment -name VHDL_FILE lib/buffer_3_state.vhd
 set_global_assignment -name VHDL_FILE helpers/keysController.vhd
 set_global_assignment -name VHDL_FILE lib/buffer_3_state_8portas.vhd
 set_global_assignment -name VHDL_FILE helpers/switchesController.vhd
+set_global_assignment -name VHDL_FILE helpers/descriminadorBorda.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
