--- a/Projeto_01_1/Projeto1.qsf
+++ b/Projeto_01_1/Projeto1.qsf
@@ -281,4 +281,6 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[9]
 #====================================================================
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_global_assignment -name VHDL_FILE lib/divisorGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/divisorGenerico_e_Interface.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
