--- a/Projeto_01_1/Projeto1.qsf
+++ b/Projeto_01_1/Projeto1.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CEBA4F23C7
 set_global_assignment -name TOP_LEVEL_ENTITY Projeto1
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:59:49  OCTOBER 27, 2022"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "21.1.1 Lite Edition"
 set_global_assignment -name VHDL_FILE helpers/switchesController.vhd
 set_global_assignment -name VHDL_FILE helpers/keysController.vhd
 set_global_assignment -name VHDL_FILE helpers/displaysController.vhd
@@ -283,5 +283,5 @@ set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name VHDL_FILE lib/divisorGenerico.vhd
 set_global_assignment -name VHDL_FILE lib/divisorGenerico_e_Interface.vhd
-set_global_assignment -name VECTOR_WAVEFORM_FILE output_files/Waveform.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
