--- a/Projeto_01_1/Projeto1.qsf
+++ b/Projeto_01_1/Projeto1.qsf
@@ -284,4 +284,6 @@ set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name VHDL_FILE lib/divisorGenerico.vhd
 set_global_assignment -name VHDL_FILE lib/divisorGenerico_e_Interface.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform1.vwf
+set_global_assignment -name VHDL_FILE helpers/timerController.vhd
+set_global_assignment -name VHDL_FILE lib/simplemux.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
