--- a/Aula_14/Aula14.qsf
+++ b/Aula_14/Aula14.qsf
@@ -43,22 +43,10 @@ set_global_assignment -name TOP_LEVEL_ENTITY Aula14
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "15:40:58  NOVEMBER 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "21.1.1 Lite Edition"
-set_global_assignment -name VHDL_FILE lib/ULASomaSub.vhd
-set_global_assignment -name VHDL_FILE lib/somaConstante.vhd
-set_global_assignment -name VHDL_FILE lib/ROMMIPS.vhd
-set_global_assignment -name VHDL_FILE lib/registradorGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/CPU.vhd
-set_global_assignment -name VHDL_FILE lib/bancoReg.vhd
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name VHDL_FILE components/ROMController.vhd
-set_global_assignment -name VHDL_FILE lib/somadorGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/generic_MUX_2x1.vhd
-set_global_assignment -name VHDL_FILE lib/estendeSinalGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/RAMMIPS.vhd
-set_global_assignment -name VHDL_FILE Aula14.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -66,6 +54,18 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VHDL_FILE components/CPU.vhd
+set_global_assignment -name VHDL_FILE lib/ULASomaSub.vhd
+set_global_assignment -name VHDL_FILE lib/somaConstante.vhd
+set_global_assignment -name VHDL_FILE lib/ROMMIPS.vhd
+set_global_assignment -name VHDL_FILE lib/registradorGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/bancoReg.vhd
+set_global_assignment -name VHDL_FILE components/ROMController.vhd
+set_global_assignment -name VHDL_FILE lib/somadorGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/generic_MUX_2x1.vhd
+set_global_assignment -name VHDL_FILE lib/estendeSinalGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/RAMMIPS.vhd
+set_global_assignment -name VHDL_FILE Aula14.vhd
 set_global_assignment -name VHDL_FILE lib/decoderInstru.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
