--- a/Projeto_02_0/Projeto2.qsf
+++ b/Projeto_02_0/Projeto2.qsf
@@ -288,4 +288,5 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[9]
 #====================================================================
 # Fim da configuraÃ§Ã£o dos pinos utilizados em Design de Computadores.
 #====================================================================
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
