--- a/Projeto_02_1/Projeto2.qsf
+++ b/Projeto_02_1/Projeto2.qsf
@@ -43,35 +43,10 @@ set_global_assignment -name TOP_LEVEL_ENTITY Projeto2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:53:13  NOVEMBER 25, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "21.1.1 Lite Edition"
-set_global_assignment -name VHDL_FILE lib/ULASomaSub.vhd
-set_global_assignment -name VHDL_FILE lib/ULA_32.vhd
-set_global_assignment -name VHDL_FILE lib/ULA_1to31.vhd
-set_global_assignment -name VHDL_FILE lib/somadorGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/somaConstante.vhd
-set_global_assignment -name VHDL_FILE lib/ROMMIPS.vhd
-set_global_assignment -name VHDL_FILE lib/registradorGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/RAMMIPS.vhd
-set_global_assignment -name VHDL_FILE lib/MUX4x1.vhd
-set_global_assignment -name VHDL_FILE lib/MUX2x1.vhd
-set_global_assignment -name VHDL_FILE lib/generic_MUX_2x1.vhd
-set_global_assignment -name VHDL_FILE lib/FullAdder.vhd
-set_global_assignment -name VHDL_FILE lib/estendeSinalGenerico.vhd
-set_global_assignment -name VHDL_FILE lib/decoder_opcode_ULA.vhd
-set_global_assignment -name VHDL_FILE lib/decoder_func_ULA.vhd
-set_global_assignment -name VHDL_FILE lib/conversorHex7Seg.vhd
-set_global_assignment -name VHDL_FILE lib/controlUnit.vhd
-set_global_assignment -name VHDL_FILE lib/bancoReg.vhd
-set_global_assignment -name VHDL_FILE components/ULA_MIPS.vhd
-set_global_assignment -name VHDL_FILE components/ROMController.vhd
-set_global_assignment -name VHDL_FILE components/displaysController.vhd
-set_global_assignment -name VHDL_FILE components/decoderMaster.vhd
-set_global_assignment -name VHDL_FILE components/CPU.vhd
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name VHDL_FILE Projeto2.vhd
-set_global_assignment -name VHDL_FILE lib/muxGenerico4x1.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -288,8 +263,36 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[9]
 #====================================================================
 # Fim da configuraÃ§Ã£o dos pinos utilizados em Design de Computadores.
 #====================================================================
-set_global_assignment -name VHDL_FILE lib/edgeDetector.vhd
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
-set_global_assignment -name VHDL_FILE lib/ROMMIPS_MIF.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE pipeline/IF_PIPELINE.vhd
+set_global_assignment -name VHDL_FILE lib/ULASomaSub.vhd
+set_global_assignment -name VHDL_FILE lib/ULA_32.vhd
+set_global_assignment -name VHDL_FILE lib/ULA_1to31.vhd
+set_global_assignment -name VHDL_FILE lib/somadorGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/somaConstante.vhd
+set_global_assignment -name VHDL_FILE lib/ROMMIPS.vhd
+set_global_assignment -name VHDL_FILE lib/registradorGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/RAMMIPS.vhd
+set_global_assignment -name VHDL_FILE lib/MUX4x1.vhd
+set_global_assignment -name VHDL_FILE lib/MUX2x1.vhd
+set_global_assignment -name VHDL_FILE lib/generic_MUX_2x1.vhd
+set_global_assignment -name VHDL_FILE lib/FullAdder.vhd
+set_global_assignment -name VHDL_FILE lib/estendeSinalGenerico.vhd
+set_global_assignment -name VHDL_FILE lib/decoder_opcode_ULA.vhd
+set_global_assignment -name VHDL_FILE lib/decoder_func_ULA.vhd
+set_global_assignment -name VHDL_FILE lib/conversorHex7Seg.vhd
+set_global_assignment -name VHDL_FILE lib/controlUnit.vhd
+set_global_assignment -name VHDL_FILE lib/bancoReg.vhd
+set_global_assignment -name VHDL_FILE components/ULA_MIPS.vhd
+set_global_assignment -name VHDL_FILE components/ROMController.vhd
+set_global_assignment -name VHDL_FILE components/displaysController.vhd
+set_global_assignment -name VHDL_FILE components/decoderMaster.vhd
+set_global_assignment -name VHDL_FILE components/CPU.vhd
+set_global_assignment -name VHDL_FILE Projeto2.vhd
+set_global_assignment -name VHDL_FILE lib/muxGenerico4x1.vhd
+set_global_assignment -name VHDL_FILE lib/edgeDetector.vhd
+set_global_assignment -name VHDL_FILE lib/ROMMIPS_MIF.vhd
+set_global_assignment -name VHDL_FILE pipeline/ID_PIPELINE.vhd
+set_global_assignment -name VHDL_FILE pipeline/EX_PIPELINE.vhd
