--- a/Projeto_02_1/Projeto2.qsf
+++ b/Projeto_02_1/Projeto2.qsf
@@ -297,4 +297,5 @@ set_global_assignment -name VHDL_FILE pipeline/ID_PIPELINE.vhd
 set_global_assignment -name VHDL_FILE pipeline/EX_PIPELINE.vhd
 set_global_assignment -name VHDL_FILE pipeline/MEM_PIPELINE.vhd
 set_global_assignment -name VHDL_FILE pipeline/WB_PIPELINE.vhd
+set_global_assignment -name AUTO_RAM_RECOGNITION ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
